# rust-cli-template

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
src/: main.rs
src/config/: cfg.rs  database.rs  log.rs  mod.rs  server.rs  token.rs
