[package]
name = "rust-cli-template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing = "0.1"

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
jwt-simple = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
